<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.Bio">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/programmer"
            android:textStyle="bold"
            android:textColor="@color/cardview_dark_background"
            android:textSize="20sp"
            android:gravity="center"
            />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:src="@drawable/foto_de_nicoll"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="10dp"
            app:civ_border_color="@color/colorPrimary"
            app:civ_shadow_color="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="140dp"
            android:lines="4"
            android:layout_height="wrap_content"
            android:text="@string/Descripción"
            android:textColor="@color/Texto"
            android:layout_gravity="center"
            android:textSize="20sp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/git"
            android:textColor="@color/Texto"
            android:layout_gravity="center"
            android:textSize="20sp"

            />




    </LinearLayout>

</RelativeLayout>